<resources>
    <string name="app_name" translatable="false">AL Zab Township Guide</string>
    <string name="SpeechToText" translatable="false">Speech To Text</string>
    <string name="thanks" translatable="false">شكر وتقدير خاص لگروب ناحية الزاب الاسفل على دعمه هذا المشروع وكذلك شكر وتقدير لكل من ساهم ويساهم في نشر العمل الخيري في هذه المدينة المباركة</string>
<!--    <string name="n_n">احمد شاكر  \n اي أضافة او فكرة تساعد بالعمل الخيري لاتتردد بالتواصل معي \n</string>-->
    <string name="doctor" translatable="false">Doctor</string>
<!--    <string name="default_notification_channel_id">hi (^_¬)</string>-->
    <string name="search_number" translatable="false">Search number</string>
    <string name="input_number" translatable="false">Input number</string>
    <string name="non" translatable="false">None available</string>
    <string name="Error_otp" translatable="false">Error OTP</string>
    <string name="otp_verification" translatable="false">OTP verification</string>
    <string name="please_enter_otp_sent_to_your_mobile_number" translatable="false">Please enter OTP sent to your Mobile Number</string>
    <string name="send_otp_again" translatable="false">Send OTP again</string>
    <string name="did_t_recive_otp" translatable="false">Did\'t recive OTP ?</string>
    <string name="verfiy" translatable="false">Verfiy</string>
    <string name="name" translatable="false">Name</string>
    <string name="number" translatable="false">Number</string>
    <string name="type" translatable="false">Type</string>
    <string name="location" translatable="false">Location</string>
    <string name="register_done" translatable="false">Register Done</string>
    <string name="edit_info" translatable="false">Edit info</string>
    <string name="field_error" translatable="false">One of the fields is empty</string>
    <string name="professions" translatable="false">Professions</string>
    <string name="blood_type" translatable="false">Blood Type</string>
    <string name="internal_transfer" translatable="false">Internal Transfer</string>
    <string name="locationWork" translatable="false">Location Work</string>
    <string name="satota" translatable="false">Satota</string>
    <string name="edit" translatable="false">Edit and Delete</string>
    <string name="select_service" translatable="false">select Service</string>
    <string name="transmission_lines" translatable="false">"Line  "</string>
    <string name="alzab_city" translatable="false">Alzab City</string>
    <string name="update" translatable="false">Update</string>
    <string name="share" translatable="false">Share</string>
    <string name="short_number" translatable="false">Short Number</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open" translatable="false">Open</string>
    <string name="nav_close" translatable="false">Close</string>
    <string name="who_can_donate_blood" translatable="false">Who Can Donate Blood ?</string>
    <string name="share_app" translatable="false">Share App</string>
    <string name="data_modification" translatable="false">Data Modification</string>
    <string name="add_donation" translatable="false">Add Donation</string>
    <string name="add_doctor" translatable="false">Add Doctor</string>
    <string name="delete" translatable="false">delete</string>
    <string name="addRequest" translatable="false">request</string>
    <string name="note" translatable="false">Here to Edit your Information And Delete Your Information</string>
    <string name="d" translatable="false">If the deletion process does not succeed, request deletion from here</string>
    <string name="request_delete" translatable="false">Request Delete</string>
    <string name="descrebtion" translatable="false">Details, whether modification or deletion and what type of services do you want?</string>
    <string name="send_Request" translatable="false">Send Request</string>
    <string name="through_social_media" translatable="false">Social Media</string>
    <string name="send_a_request_to_support" translatable="false">Send a Request to Support</string>
</resources>