<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:background="#ffffff"
    tools:context=".Activity.OtpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:src="@drawable/recived"
            android:id="@+id/img_send_otp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/otp_verification"
            android:textSize="20sp"
            android:textColor="@color/colortextfirst"
            android:textStyle="bold"/>
        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/probar2"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="53dp"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_4sdp"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/please_enter_otp_sent_to_your_mobile_number"
            android:textColor="@color/colortextsecond"/>


        //#############################

            <EditText
                android:background="@drawable/buttonselect"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_35sdp"
                android:id="@+id/inputotp1"
                android:layout_marginTop="@dimen/_10sdp"
                android:inputType="number"
                android:maxLength="6"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="Lable1For"/>

        //#############################

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/did_t_recive_otp"
                android:textSize="14sp"
                android:textColor="@color/colortextsecond"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_otp_again"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="15sp"
                android:id="@+id/sendotp_again"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.utils.widget.MotionButton
                android:layout_width="@dimen/_150sdp"
                android:layout_height="wrap_content"
                android:text="@string/verfiy"
                android:id="@+id/btnsubmit"
                android:layout_margin="@dimen/_10sdp"
                android:layout_gravity="center"
                android:background="@drawable/buttonselect"
                android:textColor="@color/colortextfirst"
                android:textStyle="bold"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>