<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="@dimen/_10sdp"
    app:cardMaxElevation="@dimen/_22sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    android:layout_margin="8dp"
    android:layout_marginTop="@dimen/_8sdp"
    android:background="@drawable/circale_shape"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/call"
            >

            <TableRow>
                <TextView
                    android:fontFamily="@font/somar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/name"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:fontFamily="@font/somar"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />

            </TableRow>
            <TableRow>
                <TextView
                    android:fontFamily="@font/somar"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:padding="8dp"
                    android:text="@string/professions"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />
                <TextView
                    android:fontFamily="@font/somar"
                    android:id="@+id/specialization"
                    android:outlineProvider="paddedBounds"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:padding="8dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />
            </TableRow>




            <TableRow>
                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:textAllCaps="false"
                    android:text="@string/number"
                    android:fontFamily="@font/somar"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    android:padding="8dp"/>
                <TextView
                    android:fontFamily="@font/somar"
                    android:id="@+id/Number"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:padding="8dp"/>
            </TableRow>

        </TableLayout>

        <ImageButton
            android:id="@+id/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/buttonselect"
            android:layout_marginEnd="@dimen/_12sdp"
            android:minWidth="@dimen/_40sdp"
            android:minHeight="@dimen/_40sdp"
            android:src="@drawable/ic_call"
            tools:ignore="SpeakableTextPresentCheck" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>